src/Analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> PACKAGE IDENTIFICADOR IMPORT PARENTESIS_A lista_imports PARENTESIS_C declaraciones lista_funciones
Rule 2     lista_imports -> lista_imports CADENA
Rule 3     lista_imports -> CADENA
Rule 4     declaraciones -> declaraciones declaracion
Rule 5     declaraciones -> declaracion
Rule 6     declaracion -> VAR STACK CORCHETE_A ENTERO CORCHETE_C FLOAT64 PT_Y_COMA
Rule 7     declaracion -> VAR HEAP CORCHETE_A ENTERO CORCHETE_C FLOAT64 PT_Y_COMA
Rule 8     declaracion -> VAR lista_ids FLOAT64 PT_Y_COMA
Rule 9     lista_ids -> lista_ids COMA IDENTIFICADOR
Rule 10    lista_ids -> IDENTIFICADOR
Rule 11    lista_funciones -> lista_funciones funcion
Rule 12    lista_funciones -> funcion
Rule 13    funcion -> FUNC IDENTIFICADOR PARENTESIS_A PARENTESIS_C LLAVE_A lista_instrucciones LLAVE_C
Rule 14    lista_instrucciones -> lista_instrucciones instruccion
Rule 15    lista_instrucciones -> instruccion
Rule 16    instruccion -> IDENTIFICADOR IGUAL expresion PT_Y_COMA
Rule 17    instruccion -> STACK CORCHETE_A expresion CORCHETE_C IGUAL expresion PT_Y_COMA
Rule 18    instruccion -> HEAP CORCHETE_A expresion CORCHETE_C IGUAL expresion PT_Y_COMA
Rule 19    instruccion -> IF PARENTESIS_A expresion PARENTESIS_C LLAVE_A GOTO IDENTIFICADOR PT_Y_COMA LLAVE_C
Rule 20    instruccion -> IDENTIFICADOR DOS_PTS
Rule 21    instruccion -> GOTO IDENTIFICADOR PT_Y_COMA
Rule 22    instruccion -> IDENTIFICADOR PARENTESIS_A PARENTESIS_C PT_Y_COMA
Rule 23    instruccion -> RETURN PT_Y_COMA
Rule 24    instruccion -> FMT PUNTO PRINTF PARENTESIS_A CADENA COMA expresion PARENTESIS_C PT_Y_COMA
Rule 25    expresion -> IDENTIFICADOR
Rule 26    expresion -> ENTERO
Rule 27    expresion -> DECIMAL
Rule 28    expresion -> expresion MAS expresion
Rule 29    expresion -> expresion MENOS expresion
Rule 30    expresion -> expresion ASTERISCO expresion
Rule 31    expresion -> expresion SLASH expresion
Rule 32    expresion -> MENOS expresion
Rule 33    expresion -> MATH PUNTO MOD PARENTESIS_A expresion COMA expresion PARENTESIS_C
Rule 34    expresion -> expresion AND expresion
Rule 35    expresion -> expresion OR expresion
Rule 36    expresion -> ADMIRACION expresion
Rule 37    expresion -> expresion IGUALIGUAL expresion
Rule 38    expresion -> expresion MENORIGUAL expresion
Rule 39    expresion -> expresion MAYORIGUAL expresion
Rule 40    expresion -> expresion MAYORQUE expresion
Rule 41    expresion -> expresion MENORQUE expresion
Rule 42    expresion -> expresion NOIGUAL expresion
Rule 43    expresion -> INT PARENTESIS_A expresion PARENTESIS_C
Rule 44    expresion -> FLOAT64 PARENTESIS_A expresion PARENTESIS_C
Rule 45    expresion -> STACK CORCHETE_A expresion CORCHETE_C
Rule 46    expresion -> HEAP CORCHETE_A expresion CORCHETE_C

Terminals, with rules where they appear

ADMIRACION           : 36
AND                  : 34
ASTERISCO            : 30
CADENA               : 2 3 24
COMA                 : 9 24 33
CORCHETE_A           : 6 7 17 18 45 46
CORCHETE_C           : 6 7 17 18 45 46
DECIMAL              : 27
DOS_PTS              : 20
ENTERO               : 6 7 26
FLOAT64              : 6 7 8 44
FMT                  : 24
FUNC                 : 13
GOTO                 : 19 21
HEAP                 : 7 18 46
IDENTIFICADOR        : 1 9 10 13 16 19 20 21 22 25
IF                   : 19
IGUAL                : 16 17 18
IGUALIGUAL           : 37
IMPORT               : 1
INT                  : 43
LLAVE_A              : 13 19
LLAVE_C              : 13 19
MAS                  : 28
MATH                 : 33
MAYORIGUAL           : 39
MAYORQUE             : 40
MENORIGUAL           : 38
MENORQUE             : 41
MENOS                : 29 32
MOD                  : 33
NOIGUAL              : 42
OR                   : 35
PACKAGE              : 1
PARENTESIS_A         : 1 13 19 22 24 33 43 44
PARENTESIS_C         : 1 13 19 22 24 33 43 44
PRINTF               : 24
PT_Y_COMA            : 6 7 8 16 17 18 19 21 22 23 24
PUNTO                : 24 33
RETURN               : 23
SLASH                : 31
STACK                : 6 17 45
VAR                  : 6 7 8
error                : 

Nonterminals, with rules where they appear

declaracion          : 4 5
declaraciones        : 1 4
expresion            : 16 17 17 18 18 19 24 28 28 29 29 30 30 31 31 32 33 33 34 34 35 35 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44 45 46
funcion              : 11 12
instruccion          : 14 15
lista_funciones      : 1 11
lista_ids            : 8 9
lista_imports        : 1 2
lista_instrucciones  : 13 14
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . PACKAGE IDENTIFICADOR IMPORT PARENTESIS_A lista_imports PARENTESIS_C declaraciones lista_funciones

    PACKAGE         shift and go to state 2

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> PACKAGE . IDENTIFICADOR IMPORT PARENTESIS_A lista_imports PARENTESIS_C declaraciones lista_funciones

    IDENTIFICADOR   shift and go to state 3


state 3

    (1) start -> PACKAGE IDENTIFICADOR . IMPORT PARENTESIS_A lista_imports PARENTESIS_C declaraciones lista_funciones

    IMPORT          shift and go to state 4


state 4

    (1) start -> PACKAGE IDENTIFICADOR IMPORT . PARENTESIS_A lista_imports PARENTESIS_C declaraciones lista_funciones

    PARENTESIS_A    shift and go to state 5


state 5

    (1) start -> PACKAGE IDENTIFICADOR IMPORT PARENTESIS_A . lista_imports PARENTESIS_C declaraciones lista_funciones
    (2) lista_imports -> . lista_imports CADENA
    (3) lista_imports -> . CADENA

    CADENA          shift and go to state 7

    lista_imports                  shift and go to state 6

state 6

    (1) start -> PACKAGE IDENTIFICADOR IMPORT PARENTESIS_A lista_imports . PARENTESIS_C declaraciones lista_funciones
    (2) lista_imports -> lista_imports . CADENA

    PARENTESIS_C    shift and go to state 8
    CADENA          shift and go to state 9


state 7

    (3) lista_imports -> CADENA .

    PARENTESIS_C    reduce using rule 3 (lista_imports -> CADENA .)
    CADENA          reduce using rule 3 (lista_imports -> CADENA .)


state 8

    (1) start -> PACKAGE IDENTIFICADOR IMPORT PARENTESIS_A lista_imports PARENTESIS_C . declaraciones lista_funciones
    (4) declaraciones -> . declaraciones declaracion
    (5) declaraciones -> . declaracion
    (6) declaracion -> . VAR STACK CORCHETE_A ENTERO CORCHETE_C FLOAT64 PT_Y_COMA
    (7) declaracion -> . VAR HEAP CORCHETE_A ENTERO CORCHETE_C FLOAT64 PT_Y_COMA
    (8) declaracion -> . VAR lista_ids FLOAT64 PT_Y_COMA

    VAR             shift and go to state 12

    declaraciones                  shift and go to state 10
    declaracion                    shift and go to state 11

state 9

    (2) lista_imports -> lista_imports CADENA .

    PARENTESIS_C    reduce using rule 2 (lista_imports -> lista_imports CADENA .)
    CADENA          reduce using rule 2 (lista_imports -> lista_imports CADENA .)


state 10

    (1) start -> PACKAGE IDENTIFICADOR IMPORT PARENTESIS_A lista_imports PARENTESIS_C declaraciones . lista_funciones
    (4) declaraciones -> declaraciones . declaracion
    (11) lista_funciones -> . lista_funciones funcion
    (12) lista_funciones -> . funcion
    (6) declaracion -> . VAR STACK CORCHETE_A ENTERO CORCHETE_C FLOAT64 PT_Y_COMA
    (7) declaracion -> . VAR HEAP CORCHETE_A ENTERO CORCHETE_C FLOAT64 PT_Y_COMA
    (8) declaracion -> . VAR lista_ids FLOAT64 PT_Y_COMA
    (13) funcion -> . FUNC IDENTIFICADOR PARENTESIS_A PARENTESIS_C LLAVE_A lista_instrucciones LLAVE_C

    VAR             shift and go to state 12
    FUNC            shift and go to state 16

    lista_funciones                shift and go to state 13
    declaracion                    shift and go to state 14
    funcion                        shift and go to state 15

state 11

    (5) declaraciones -> declaracion .

    VAR             reduce using rule 5 (declaraciones -> declaracion .)
    FUNC            reduce using rule 5 (declaraciones -> declaracion .)


state 12

    (6) declaracion -> VAR . STACK CORCHETE_A ENTERO CORCHETE_C FLOAT64 PT_Y_COMA
    (7) declaracion -> VAR . HEAP CORCHETE_A ENTERO CORCHETE_C FLOAT64 PT_Y_COMA
    (8) declaracion -> VAR . lista_ids FLOAT64 PT_Y_COMA
    (9) lista_ids -> . lista_ids COMA IDENTIFICADOR
    (10) lista_ids -> . IDENTIFICADOR

    STACK           shift and go to state 17
    HEAP            shift and go to state 18
    IDENTIFICADOR   shift and go to state 20

    lista_ids                      shift and go to state 19

state 13

    (1) start -> PACKAGE IDENTIFICADOR IMPORT PARENTESIS_A lista_imports PARENTESIS_C declaraciones lista_funciones .
    (11) lista_funciones -> lista_funciones . funcion
    (13) funcion -> . FUNC IDENTIFICADOR PARENTESIS_A PARENTESIS_C LLAVE_A lista_instrucciones LLAVE_C

    $end            reduce using rule 1 (start -> PACKAGE IDENTIFICADOR IMPORT PARENTESIS_A lista_imports PARENTESIS_C declaraciones lista_funciones .)
    FUNC            shift and go to state 16

    funcion                        shift and go to state 21

state 14

    (4) declaraciones -> declaraciones declaracion .

    VAR             reduce using rule 4 (declaraciones -> declaraciones declaracion .)
    FUNC            reduce using rule 4 (declaraciones -> declaraciones declaracion .)


state 15

    (12) lista_funciones -> funcion .

    FUNC            reduce using rule 12 (lista_funciones -> funcion .)
    $end            reduce using rule 12 (lista_funciones -> funcion .)


state 16

    (13) funcion -> FUNC . IDENTIFICADOR PARENTESIS_A PARENTESIS_C LLAVE_A lista_instrucciones LLAVE_C

    IDENTIFICADOR   shift and go to state 22


state 17

    (6) declaracion -> VAR STACK . CORCHETE_A ENTERO CORCHETE_C FLOAT64 PT_Y_COMA

    CORCHETE_A      shift and go to state 23


state 18

    (7) declaracion -> VAR HEAP . CORCHETE_A ENTERO CORCHETE_C FLOAT64 PT_Y_COMA

    CORCHETE_A      shift and go to state 24


state 19

    (8) declaracion -> VAR lista_ids . FLOAT64 PT_Y_COMA
    (9) lista_ids -> lista_ids . COMA IDENTIFICADOR

    FLOAT64         shift and go to state 25
    COMA            shift and go to state 26


state 20

    (10) lista_ids -> IDENTIFICADOR .

    FLOAT64         reduce using rule 10 (lista_ids -> IDENTIFICADOR .)
    COMA            reduce using rule 10 (lista_ids -> IDENTIFICADOR .)


state 21

    (11) lista_funciones -> lista_funciones funcion .

    FUNC            reduce using rule 11 (lista_funciones -> lista_funciones funcion .)
    $end            reduce using rule 11 (lista_funciones -> lista_funciones funcion .)


state 22

    (13) funcion -> FUNC IDENTIFICADOR . PARENTESIS_A PARENTESIS_C LLAVE_A lista_instrucciones LLAVE_C

    PARENTESIS_A    shift and go to state 27


state 23

    (6) declaracion -> VAR STACK CORCHETE_A . ENTERO CORCHETE_C FLOAT64 PT_Y_COMA

    ENTERO          shift and go to state 28


state 24

    (7) declaracion -> VAR HEAP CORCHETE_A . ENTERO CORCHETE_C FLOAT64 PT_Y_COMA

    ENTERO          shift and go to state 29


state 25

    (8) declaracion -> VAR lista_ids FLOAT64 . PT_Y_COMA

    PT_Y_COMA       shift and go to state 30


state 26

    (9) lista_ids -> lista_ids COMA . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 31


state 27

    (13) funcion -> FUNC IDENTIFICADOR PARENTESIS_A . PARENTESIS_C LLAVE_A lista_instrucciones LLAVE_C

    PARENTESIS_C    shift and go to state 32


state 28

    (6) declaracion -> VAR STACK CORCHETE_A ENTERO . CORCHETE_C FLOAT64 PT_Y_COMA

    CORCHETE_C      shift and go to state 33


state 29

    (7) declaracion -> VAR HEAP CORCHETE_A ENTERO . CORCHETE_C FLOAT64 PT_Y_COMA

    CORCHETE_C      shift and go to state 34


state 30

    (8) declaracion -> VAR lista_ids FLOAT64 PT_Y_COMA .

    VAR             reduce using rule 8 (declaracion -> VAR lista_ids FLOAT64 PT_Y_COMA .)
    FUNC            reduce using rule 8 (declaracion -> VAR lista_ids FLOAT64 PT_Y_COMA .)


state 31

    (9) lista_ids -> lista_ids COMA IDENTIFICADOR .

    FLOAT64         reduce using rule 9 (lista_ids -> lista_ids COMA IDENTIFICADOR .)
    COMA            reduce using rule 9 (lista_ids -> lista_ids COMA IDENTIFICADOR .)


state 32

    (13) funcion -> FUNC IDENTIFICADOR PARENTESIS_A PARENTESIS_C . LLAVE_A lista_instrucciones LLAVE_C

    LLAVE_A         shift and go to state 35


state 33

    (6) declaracion -> VAR STACK CORCHETE_A ENTERO CORCHETE_C . FLOAT64 PT_Y_COMA

    FLOAT64         shift and go to state 36


state 34

    (7) declaracion -> VAR HEAP CORCHETE_A ENTERO CORCHETE_C . FLOAT64 PT_Y_COMA

    FLOAT64         shift and go to state 37


state 35

    (13) funcion -> FUNC IDENTIFICADOR PARENTESIS_A PARENTESIS_C LLAVE_A . lista_instrucciones LLAVE_C
    (14) lista_instrucciones -> . lista_instrucciones instruccion
    (15) lista_instrucciones -> . instruccion
    (16) instruccion -> . IDENTIFICADOR IGUAL expresion PT_Y_COMA
    (17) instruccion -> . STACK CORCHETE_A expresion CORCHETE_C IGUAL expresion PT_Y_COMA
    (18) instruccion -> . HEAP CORCHETE_A expresion CORCHETE_C IGUAL expresion PT_Y_COMA
    (19) instruccion -> . IF PARENTESIS_A expresion PARENTESIS_C LLAVE_A GOTO IDENTIFICADOR PT_Y_COMA LLAVE_C
    (20) instruccion -> . IDENTIFICADOR DOS_PTS
    (21) instruccion -> . GOTO IDENTIFICADOR PT_Y_COMA
    (22) instruccion -> . IDENTIFICADOR PARENTESIS_A PARENTESIS_C PT_Y_COMA
    (23) instruccion -> . RETURN PT_Y_COMA
    (24) instruccion -> . FMT PUNTO PRINTF PARENTESIS_A CADENA COMA expresion PARENTESIS_C PT_Y_COMA

    IDENTIFICADOR   shift and go to state 38
    STACK           shift and go to state 41
    HEAP            shift and go to state 42
    IF              shift and go to state 43
    GOTO            shift and go to state 44
    RETURN          shift and go to state 45
    FMT             shift and go to state 46

    lista_instrucciones            shift and go to state 39
    instruccion                    shift and go to state 40

state 36

    (6) declaracion -> VAR STACK CORCHETE_A ENTERO CORCHETE_C FLOAT64 . PT_Y_COMA

    PT_Y_COMA       shift and go to state 47


state 37

    (7) declaracion -> VAR HEAP CORCHETE_A ENTERO CORCHETE_C FLOAT64 . PT_Y_COMA

    PT_Y_COMA       shift and go to state 48


state 38

    (16) instruccion -> IDENTIFICADOR . IGUAL expresion PT_Y_COMA
    (20) instruccion -> IDENTIFICADOR . DOS_PTS
    (22) instruccion -> IDENTIFICADOR . PARENTESIS_A PARENTESIS_C PT_Y_COMA

    IGUAL           shift and go to state 49
    DOS_PTS         shift and go to state 50
    PARENTESIS_A    shift and go to state 51


state 39

    (13) funcion -> FUNC IDENTIFICADOR PARENTESIS_A PARENTESIS_C LLAVE_A lista_instrucciones . LLAVE_C
    (14) lista_instrucciones -> lista_instrucciones . instruccion
    (16) instruccion -> . IDENTIFICADOR IGUAL expresion PT_Y_COMA
    (17) instruccion -> . STACK CORCHETE_A expresion CORCHETE_C IGUAL expresion PT_Y_COMA
    (18) instruccion -> . HEAP CORCHETE_A expresion CORCHETE_C IGUAL expresion PT_Y_COMA
    (19) instruccion -> . IF PARENTESIS_A expresion PARENTESIS_C LLAVE_A GOTO IDENTIFICADOR PT_Y_COMA LLAVE_C
    (20) instruccion -> . IDENTIFICADOR DOS_PTS
    (21) instruccion -> . GOTO IDENTIFICADOR PT_Y_COMA
    (22) instruccion -> . IDENTIFICADOR PARENTESIS_A PARENTESIS_C PT_Y_COMA
    (23) instruccion -> . RETURN PT_Y_COMA
    (24) instruccion -> . FMT PUNTO PRINTF PARENTESIS_A CADENA COMA expresion PARENTESIS_C PT_Y_COMA

    LLAVE_C         shift and go to state 52
    IDENTIFICADOR   shift and go to state 38
    STACK           shift and go to state 41
    HEAP            shift and go to state 42
    IF              shift and go to state 43
    GOTO            shift and go to state 44
    RETURN          shift and go to state 45
    FMT             shift and go to state 46

    instruccion                    shift and go to state 53

state 40

    (15) lista_instrucciones -> instruccion .

    LLAVE_C         reduce using rule 15 (lista_instrucciones -> instruccion .)
    IDENTIFICADOR   reduce using rule 15 (lista_instrucciones -> instruccion .)
    STACK           reduce using rule 15 (lista_instrucciones -> instruccion .)
    HEAP            reduce using rule 15 (lista_instrucciones -> instruccion .)
    IF              reduce using rule 15 (lista_instrucciones -> instruccion .)
    GOTO            reduce using rule 15 (lista_instrucciones -> instruccion .)
    RETURN          reduce using rule 15 (lista_instrucciones -> instruccion .)
    FMT             reduce using rule 15 (lista_instrucciones -> instruccion .)


state 41

    (17) instruccion -> STACK . CORCHETE_A expresion CORCHETE_C IGUAL expresion PT_Y_COMA

    CORCHETE_A      shift and go to state 54


state 42

    (18) instruccion -> HEAP . CORCHETE_A expresion CORCHETE_C IGUAL expresion PT_Y_COMA

    CORCHETE_A      shift and go to state 55


state 43

    (19) instruccion -> IF . PARENTESIS_A expresion PARENTESIS_C LLAVE_A GOTO IDENTIFICADOR PT_Y_COMA LLAVE_C

    PARENTESIS_A    shift and go to state 56


state 44

    (21) instruccion -> GOTO . IDENTIFICADOR PT_Y_COMA

    IDENTIFICADOR   shift and go to state 57


state 45

    (23) instruccion -> RETURN . PT_Y_COMA

    PT_Y_COMA       shift and go to state 58


state 46

    (24) instruccion -> FMT . PUNTO PRINTF PARENTESIS_A CADENA COMA expresion PARENTESIS_C PT_Y_COMA

    PUNTO           shift and go to state 59


state 47

    (6) declaracion -> VAR STACK CORCHETE_A ENTERO CORCHETE_C FLOAT64 PT_Y_COMA .

    VAR             reduce using rule 6 (declaracion -> VAR STACK CORCHETE_A ENTERO CORCHETE_C FLOAT64 PT_Y_COMA .)
    FUNC            reduce using rule 6 (declaracion -> VAR STACK CORCHETE_A ENTERO CORCHETE_C FLOAT64 PT_Y_COMA .)


state 48

    (7) declaracion -> VAR HEAP CORCHETE_A ENTERO CORCHETE_C FLOAT64 PT_Y_COMA .

    VAR             reduce using rule 7 (declaracion -> VAR HEAP CORCHETE_A ENTERO CORCHETE_C FLOAT64 PT_Y_COMA .)
    FUNC            reduce using rule 7 (declaracion -> VAR HEAP CORCHETE_A ENTERO CORCHETE_C FLOAT64 PT_Y_COMA .)


state 49
